# CSDS337-Compiler-Design-Project

./: CMakeLists.txt  CSDS337-Spring24-PG4.tex  README.md  executeTests.sh  pyLLVM.gram  run.sh
src/: README.md  ast.cpp  factorial.py  function.cpp
src/HoldOn/: add.py  while.py
src/expressions/: addition.cpp  and.cpp  and.h  bool.cpp  bool.h  bool2Int.h  call.cpp  comparison.cpp  division.cpp  division.h  int2Bool.cpp  multiplication.cpp  multiplication.h  negative.cpp  negative.h  subtraction.cpp  variable.cpp
src/files/: expression.cpp  function.cpp  function.h  parser-p.hpp
src/files/expressions/: bool.cpp  bool2Int.h
src/files/frontend/: lexer.l  parser.y
src/files/statements/: block.cpp
src/files/types/: simple.h
src/frontend/: lexer.l  parser.y
src/statements/: for.cpp  for.h
src/tests/: conditional.py
src/types/: function.h
tests/: addition.ll  addition.py  ifStatement.ll  ifStatement.py  simple.ll  simple2.ll  simple2.py  simple3.ll  simple3.py  simple4.ll  simple4.py  subtraction.ll  subtraction.py  while.ll  while.py
